syntax = "proto3";

package quic;

option go_package = "./proto";

service QuicService {
  rpc CreateCheckout(CreateCheckoutRequest) returns (CreateCheckoutResponse);
  rpc DeleteCheckout(DeleteCheckoutRequest) returns (DeleteCheckoutResponse);
  rpc ListCheckouts(ListCheckoutsRequest) returns (ListCheckoutsResponse);
}

message CreateCheckoutRequest {
  string clone_name = 1;
}

message CreateCheckoutResponse {
  string connection_string = 1;
}

message DeleteCheckoutRequest {
  string clone_name = 1;
}

message DeleteCheckoutResponse {
  bool deleted = 1;
}

message ListCheckoutsRequest {
  // No parameters needed
}

message CheckoutSummary {
  string clone_name = 1;
  string created_by = 2;
  string created_at = 3;  // RFC3339 formatted timestamp
  int32 port = 4;
}

message ListCheckoutsResponse {
  repeated CheckoutSummary checkouts = 1;
}
